ik I need to fix alignment

--- a/active/index.css
+++ b/active/index.css
@@ -55,19 +55,18 @@ body {
 }
 
 #searchbar {
-  width:70%;
+  text-align: center;
   margin: 20px auto;
 }
 
 .form__input {
-  padding-left: 20%;
-  padding-right: 20%;
+  padding-left: 200px;
   align-self: center;
   padding: 10px;
   border: none;
   border-radius: 5px;
   font-size: 16px;
-  width: 98%;
+  width: 800px;
   box-shadow: 0 0 5px rgba(255, 255, 255, 0.3);
   background-color: #222;
   text-align: center;
@@ -147,7 +146,7 @@ a{
   width:150px;
   border-radius:18px;
   border:1.75px solid #2b2a2a;
-  display: block;
+  float: left;
 
 }
 .popularCont:hover{
@@ -175,6 +174,7 @@ a{
 }
 
 .module-border-wrap {
+  margin-left: 200px;
   max-width: fit-content;
   padding: 1rem;
   align-self: center;
